terminal modal text alignment fixed

--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -172,6 +172,7 @@ h2 {
     padding: 10px;
   }
   #gobuster-modal .terminal {
+    overflow-wrap: anywhere;
     white-space: pre-wrap;
     line-height: 1.4;
   }
